--- a/Frontend/havenly-frontend/package.json
+++ b/Frontend/havenly-frontend/package.json
@@ -11,8 +11,10 @@
     "@mdi/font": "5.9.55",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "lodash-es": "^4.17.21",
     "material-design-icons-iconfont": "^6.7.0",
     "roboto-fontface": "*",
+    "vee-validate": "^4.12.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
