--- a/Frontend/havenly-frontend/package.json
+++ b/Frontend/havenly-frontend/package.json
@@ -13,7 +13,9 @@
     "bootstrap-icons": "^1.11.3",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
+    "v-credit-card": "^1.2.4",
     "vue": "^3.2.13",
+    "vue-paycard": "^0.7.0",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.0",
