--- a/Frontend/havenly-frontend/package.json
+++ b/Frontend/havenly-frontend/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "bootstrap": "^5.3.3",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "lodash-es": "^4.17.21",
     "material-design-icons-iconfont": "^6.7.0",
     "roboto-fontface": "*",
+    "swiper": "^11.1.1",
     "vee-validate": "^4.12.6",
     "vue": "^3.2.13",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.0",
