--- a/Frontend/havenly-frontend/package.json
+++ b/Frontend/havenly-frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "axios": "^1.6.8",
+    "axos": "^0.0.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "core-js": "^3.8.3",
