--- a/Backend/Backend/pom.xml
+++ b/Backend/Backend/pom.xml
@@ -96,7 +96,15 @@
 						<artifactId>spring-restdocs-asciidoctor</artifactId>
 						<version>${spring-restdocs.version}</version>
 					</dependency>
+					
+					<dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-collections4</artifactId>
+        <version>4.4</version>
+    </dependency>
+    
 				</dependencies>
+				
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
