--- a/Frontend/havenly-frontend/package.json
+++ b/Frontend/havenly-frontend/package.json
@@ -8,19 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@mdi/font": "5.9.55",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
+    "chart.js": "^4.4.2",
     "core-js": "^3.8.3",
     "lodash-es": "^4.17.21",
     "material-design-icons-iconfont": "^6.7.0",
     "roboto-fontface": "*",
+    "sweetalert2": "^11.10.8",
     "swiper": "^11.1.1",
     "vee-validate": "^4.12.6",
     "vue": "^3.2.13",
     "vue-carousel": "^0.18.0",
     "vue-router": "^4.3.2",
-    "vuetify": "^3.0.0-beta.0",
+    "vuetify": "^3.6.0-alpha.2",
     "vuex": "^4.0.0",
     "webfontloader": "^1.0.0"
   },
