--- a/Frontend/havenly-frontend/package.json
+++ b/Frontend/havenly-frontend/package.json
@@ -4,25 +4,16 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "dev": "your-start-command-here",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "start": "json-server --watch ./src/assets/database/db.json"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
-    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
-    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
-    "json-server": "^1.0.0-alpha.23",
-    "lodash-es": "^4.17.21",
     "material-design-icons-iconfont": "^6.7.0",
     "roboto-fontface": "*",
-    "swiper": "^11.1.1",
-    "vee-validate": "^4.12.6",
     "vue": "^3.2.13",
-    "vue-carousel": "^0.18.0",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.0",
@@ -31,7 +22,6 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli": "^5.0.8",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
