--- a/Backend/Backend/src/main/resources/application.properties
+++ b/Backend/Backend/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.port=8083
 spring.datasource.url =jdbc:mysql://localhost:3306/havenly?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = thepeaceofme17
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
