--- a/Backend/Backend/src/main/resources/application.properties
+++ b/Backend/Backend/src/main/resources/application.properties
@@ -3,6 +3,14 @@ server.port=8083
 spring.datasource.url =jdbc:mysql://localhost:3306/havenly?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = thepeaceofme17
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+spring.mail.host=smtp.googlemail.com
+spring.mail.port=26
+spring.mail.username=nicktravis28@gmail.com
+spring.mail.password=qgmpnqdqzfmavkqx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.debug=true
