--- a/Backend/Backend/src/main/resources/application.properties
+++ b/Backend/Backend/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password = ThetZawHein@10151099
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
