--- a/Backend/Backend/src/main/resources/application.properties
+++ b/Backend/Backend/src/main/resources/application.properties
@@ -1,4 +1,21 @@
 
+spring.mail.host=smtp.googlemail.com
+spring.mail.port=586
+spring.mail.username=nicktravis28@gmail.com
+spring.mail.password=qlgebegkboxairtt
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.debug=true
+spring.mail.properties.mail.smtp.starttls.required=false
+
+#spring.mail.properties.mail.smtp.connectiontimeout=5000
+#spring.mail.properties.mail.smtp.timeout=5000
+#spring.mail.properties.mail.smtp.writetimeout=5000
+#    
+##spring.mail.properties.mail.smtp.socketFactory.port=25
+#spring.mail.properties.mail.smtp.socketFactory.class =javax.net.ssl.SSLSocketFactory
+
+
 server.port=8083
 spring.datasource.url =jdbc:mysql://localhost:3306/havenly?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = root
@@ -7,10 +24,5 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
-spring.mail.host=smtp.googlemail.com
-spring.mail.port=26
-spring.mail.username=nicktravis28@gmail.com
-spring.mail.password=qgmpnqdqzfmavkqx
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.debug=true
+
+
