--- a/Frontend/havenly-frontend/package.json
+++ b/Frontend/havenly-frontend/package.json
@@ -30,6 +30,7 @@
     "sweetalert2": "^11.10.8",
     "swiper": "^11.1.1",
     "terser-webpack-plugin": "^5.3.10",
+    "uuid": "^9.0.1",
     "vee-validate": "^4.12.6",
     "vue": "^3.2.13",
     "vue-carousel": "^0.18.0",
