addGoogleMaps, tryToSaveMultiplePhotos but still failed

--- a/Frontend/havenly-frontend/package.json
+++ b/Frontend/havenly-frontend/package.json
@@ -31,12 +31,13 @@
     "sweetalert2": "^11.10.8",
     "swiper": "^11.1.1",
     "terser-webpack-plugin": "^5.3.10",
-    "v-credit-card": "^1.2.4",
     "uuid": "^9.0.1",
+    "v-credit-card": "^1.2.4",
     "vee-validate": "^4.12.6",
     "vue": "^3.2.13",
     "vue-carousel": "^0.18.0",
     "vue-router": "^4.3.2",
+    "vue3-google-map": "^0.20.0",
     "vuetify": "^3.6.0-alpha.2",
     "vuex": "^4.0.0",
     "webfontloader": "^1.0.0",
