--- a/Backend/Backend/pom.xml
+++ b/Backend/Backend/pom.xml
@@ -23,10 +23,7 @@
 		</dependency>
 		
 					
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
@@ -71,6 +68,21 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-security</artifactId>
+  
+</dependency>
+
+<dependency>
+<groupId>net.minidev</groupId>
+<artifactId>accessors-smart</artifactId>
+<version>2.5.1</version>
+</dependency>
+
+
+
+
 
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
 
@@ -82,6 +94,11 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>com.BScamp</groupId>
+			<artifactId>MovieTheater</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
