--- a/Frontend/havenly-frontend/package.json
+++ b/Frontend/havenly-frontend/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^4.4.2",
     "compression": "^1.7.4",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.2.0",
     "express": "^4.19.2",
     "finalhandler": "^1.2.0",
     "iconv-lite": "^0.6.3",
