--- a/Backend/Backend/src/main/resources/application.properties
+++ b/Backend/Backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8083
 spring.datasource.url =jdbc:mysql://localhost:3306/havenly?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = root
+spring.datasource.password = ThetZawHein@10151099
 spring.jpa.hibernate.ddl-auto = update
-spring.datasource.password = root
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size=100MB
