--- a/Backend/Backend/pom.xml
+++ b/Backend/Backend/pom.xml
@@ -90,7 +90,7 @@
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-mail</artifactId>
-		    <version>3.2.5</version>
+		    <version>3.2.5</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 
 
